FIX:Add mobile cCustomer cards flex-wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,7 @@ h4 {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	width: 30%;
 	padding: 0 2.2em;
 	/* border: 2px solid red; */
 }
@@ -330,6 +331,14 @@ footer nav ul a:hover {
 	button,
 	button.get-started {
 		margin: 2em 0;
+	}
+
+	.customer-cards-container {
+		flex-wrap: wrap;
+	}
+
+	.customer-card {
+		width: 100%;
 	}
 
 	.input-container input[type='text'],
